--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'com.google.zxing:core:3.5.3'
     implementation 'com.google.zxing:javase:3.5.3'
+    implementation 'me.paulschwarz:spring-dotenv:2.5.4'
     
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
