--- a/back-end/src/main/resources/application.yml
+++ b/back-end/src/main/resources/application.yml
@@ -1,26 +1,26 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/igym_db
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://${env.DB_HOST:localhost}:${env.DB_PORT:5432}/${env.DB_NAME:igym_db}
+    username: ${env.DB_USERNAME}
+    password: ${env.DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
-    show-sql: true
+      ddl-auto: ${env.JPA_DDL_AUTO:update}
+    show-sql: ${env.SHOW_SQL:true}
     properties:
       hibernate:
-        format_sql: true
+        format_sql: ${env.FORMAT_SQL:true}
         dialect: org.hibernate.dialect.PostgreSQLDialect
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: ${env.MAX_FILE_SIZE:10MB}
+      max-request-size: ${env.MAX_REQUEST_SIZE:10MB}
   mail:
-    host: smtp.gmail.com
-    port: 587
-    username: your-email@gmail.com
-    password: your-app-specific-password
+    host: ${env.MAIL_HOST:smtp.gmail.com}
+    port: ${env.MAIL_PORT:587}
+    username: ${env.MAIL_USERNAME}
+    password: ${env.MAIL_PASSWORD}
     properties:
       mail:
         smtp:
@@ -29,14 +29,14 @@ spring:
             enable: true
 
 server:
-  port: 8080
+  port: ${env.SERVER_PORT:8080}
   error:
     include-message: always
 
 jwt:
-  secret: your_jwt_secret_key_here_make_it_long_and_secure_in_production
-  expiration: 86400000 # 24 hours in milliseconds
+  secret: ${env.JWT_SECRET}
+  expiration: ${env.JWT_EXPIRATION:86400000}
 
 app:
   cors:
-    allowed-origins: http://localhost:4200,http://localhost:4201
+    allowed-origins: ${env.CORS_ALLOWED_ORIGINS:http://localhost:4200,http://localhost:4201}
